<resources>
    <string name="app_name">Chats</string>
    <string name="sign_up">Sign-Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_enter">Re-Enter Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="already_have_an_account">Already Registered? ,</string>
    <string name="sign_in"><u> Sign-In</u></string>
    <string name="enter_mail">Type your Email</string>
    <string name="enter_password">Type Your Password</string>
    <string name="sign_up_symbol"><u>Sign Up !</u></string>
    <string name="not_registered">Not Registered Yet? ,</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="logout">Logout</string>

</resources>